Doing changes into NodeList and LinkedList to allow the DoublyLinkedList implementation. Inserting DoublyLinkedList implementation.